--- a/frontend/style.css
+++ b/frontend/style.css
@@ -112,6 +112,9 @@ header .jumbotron {
 .card_tag a {
     background-color: chartreuse;
     color: black;
+    border-radius: .7rem;
+    padding: .1rem;
+    margin-top: 2rem;
 }
 
 
